force-app/main/default/objects/Volunteer_Shift__c/Volunteer_Shift__c.object-meta.xml
<CustomObject>
    <description>Tracks individual volunteer shift assignments and hours worked</description>
    <label>Volunteer Shift</label>
    <nameField>
        <displayFormat>SHIFT-{00000}</displayFormat>
        <label>Shift Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Shifts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>