force-app/main/default/objects/Volunteer_Shift__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <label>Hours Worked</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>