force-app/main/default/objects/Volunteer_Shift__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <label>Volunteer</label>
    <referenceTo>Volunteer__c</referenceTo>
    <deleteConstraint>Restrict</deleteConstraint>
    <relationshipLabel>Volunteer Shifts</relationshipLabel>
    <relationshipName>Volunteer_Shifts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>